updated dependencies and small improvements